[gd_scene load_steps=2 format=3 uid="uid://b3fwl1l8vv74r"]

[ext_resource type="Script" uid="uid://d0es3dltgp4ei" path="res://scripts/camera_display.gd" id="1_sy6je"]

[node name="camera_display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sy6je")

[node name="http_request" type="HTTPRequest" parent="."]

[node name="camera_feed" type="TextureRect" parent="."]
custom_minimum_size = Vector2(224, 224)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -240.0
offset_right = 244.0
offset_bottom = -16.0
grow_vertical = 0
stretch_mode = 5

[node name="countdown_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="confidence_label" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(150, 200)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 150.0
offset_bottom = 150.0
grow_vertical = 2
